Refactor shared sources and apply 1.21.11 fixes